--- a/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/Main.storyboard
+++ b/SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -65,6 +65,7 @@
                                         <state key="normal" title="校历（快放假了）"/>
                                         <connections>
                                             <action selector="web:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dd4-fV-88m"/>
+                                            <segue destination="l7h-TE-TqJ" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="nnS-jN-RRO"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zk3-jO-RCW">
@@ -243,6 +244,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZK2-Yd-Zrv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1058" y="105"/>
+        </scene>
+        <!--Web-->
+        <scene sceneID="yJi-qq-5qK">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Web" id="l7h-TE-TqJ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mdv-dc-mgu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-315" y="470"/>
         </scene>
     </scenes>
     <resources>
